# AKTHAI_Telegram

./: HARBIY_MESSENJER.md  History.html  QURISH_QOLLANMASI.md  WINDOWS_QOLLANMASI.md  package.json  tree.bat
lokal-messenger/: .gitignore  setup-windows.bat  start-all.bat  start-client.bat  start-server.bat  stop-all.bat  stop-client.bat  stop-server.bat
lokal-messenger/client/: .env.development.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
lokal-messenger/client/public/: notification-sw.js
lokal-messenger/client/src/: App.module.css  App.tsx  config.ts  index.css  launchStandalone.ts  main.tsx
lokal-messenger/client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
lokal-messenger/client/src-tauri/capabilities/: default.json
lokal-messenger/client/src-tauri/src/: crypto.rs  lib.rs  main.rs  net.rs  session.rs  store.rs
lokal-messenger/client/src-tauri/src/commands/: auth.rs  history.rs  integrity.rs  keys.rs  messages.rs  mod.rs
lokal-messenger/client/src-tauri/src/crypto/: mod.rs  ratchet.rs  signal.rs  store.rs
lokal-messenger/client/src/api/: http.ts  ws.ts
lokal-messenger/client/src/components/: ChatList.tsx  ChatView.tsx
lokal-messenger/client/src/components/Admin/: AdminDashboard.module.css  AdminDashboard.tsx  DeleteUserConfirmModal.tsx
lokal-messenger/client/src/components/Auth/: AccountUnlockModal.module.css  AccountUnlockModal.tsx  FirstLoginPasswordPrompt.tsx  LoginPage.module.css  LoginPage.tsx  LogoutConfirmModal.module.css  LogoutConfirmModal.tsx
lokal-messenger/client/src/components/Chat/: AttachmentModal.module.css  AttachmentModal.tsx  ChatItem.module.css  ChatItem.tsx  ChatList.module.css  ChatList.tsx  CreateChannelModal.module.css  CreateChannelModal.tsx  CreateGroupModal.tsx  GroupMembersPanel.module.css  GroupMembersPanel.tsx  GroupSettingsModal.module.css  GroupSettingsModal.tsx  ImageViewer.module.css  ImageViewer.tsx  InputBar.module.css  InputBar.tsx  JoinGroupModal.tsx  MediaAlbumBubble.module.css  MediaAlbumBubble.tsx  MessageArea.module.css  MessageArea.tsx  MessageBubble.module.css  MessageBubble.tsx  UserDirectory.module.css  UserDirectory.tsx
lokal-messenger/client/src/config/: devServer.ts  serverConfig.ts
lokal-messenger/client/src/contexts/: BackNavigationContext.tsx  ThemeContext.tsx
lokal-messenger/client/src/crypto/: adapter.ts  channelCrypto.ts  cryptoErrors.ts  fileCrypto.ts  groupKeyShare.ts  ikConvert.ts  userScope.ts  webCrypto.ts
lokal-messenger/client/src/net/: api.ts  socket.ts
lokal-messenger/client/src/pages/: LoginPage.tsx
lokal-messenger/client/src/storage/: localHistory.ts
lokal-messenger/client/src/store/: authStore.ts  chatStore.ts
lokal-messenger/client/src/stores/: auth.ts  chats.ts  theme.ts
lokal-messenger/client/src/styles/: chatlist.css  chatview.css  layout.css  login.css  theme.css
lokal-messenger/client/src/themes/: index.ts
lokal-messenger/client/src/types/: index.ts
lokal-messenger/client/src/utils/: avatarGradient.ts  groupSenderColor.ts  mediaLoader.ts  messageAlbum.ts  messageText.ts  notifications.ts  presence.ts  userDirectory.ts
lokal-messenger/deploy/: config.example.yaml  config.windows.dev.yaml  db_setup.ps1  docker-compose.yml  setup_dev.ps1  setup_windows.ps1
lokal-messenger/deploy/tls/: .gitkeep
lokal-messenger/server/: .gitignore  Dockerfile  config.example.yaml  go.mod  go.sum
lokal-messenger/server/cmd/createuser/: main.go
lokal-messenger/server/cmd/ensureschema/: main.go
lokal-messenger/server/cmd/hashtool/: main.go
lokal-messenger/server/cmd/server/: main.go
lokal-messenger/server/cmd/setpassword/: main.go
lokal-messenger/server/db/migrations/: 0001_init.sql  0002_hide_last_seen.sql  0003_user_org.sql  0004_profile_avatar.sql  0005_channels.sql  0006_groups.sql
lokal-messenger/server/internal/api/: admin_routes.go  auth_routes.go  chat_routes.go  group_routes.go  handlers.go  keys_routes.go  profile_policy.go  profile_routes.go  router.go  sessions.go  spa.go
lokal-messenger/server/internal/auth/: jwt.go  password.go  validate.go
lokal-messenger/server/internal/cache/: keys.go  redis.go
lokal-messenger/server/internal/config/: config.go
lokal-messenger/server/internal/db/: pool.go
lokal-messenger/server/internal/middleware/: auth.go
lokal-messenger/server/internal/ws/: handler.go  hub.go
(+24 files in other folders)
