# Fayl: client/src-tauri/Cargo.toml
# Maqsad: Tauri mijozining Rust qaramliklari e'lon qilinadi.
# Eslatma: libsignal API'si versiyaga sezgir. Quyidagi "tag" qiymati qurish
#          paytida o'rnatilgan kutubxona versiyasiga moslab tekshiriladi.
[package]
name = "lokal-messenger-client"
version = "1.0.0"
edition = "2021"
description = "Yopiq tarmoq uchun E2EE messenjer (Tauri mijozi)"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Signal Protocol implementatsiyasi (X3DH + Double Ratchet)
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag = "v0.50.0" }

# Mahalliy saqlov (identity, prekey, session yozuvlari)
rusqlite = { version = "0.31", features = ["bundled"] }

# Server bilan REST aloqasi (yopiq tarmoqda o'z-o'zini imzolagan TLS bilan)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Asinxron ish vaqti va yordamchi kutubxonalar
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"
# libsignal'ning mahalliy (Send bo'lmagan) asinxron chaqiruvlarini bloklab bajarish uchun
futures = { version = "0.3", default-features = false, features = ["executor"] }
rand = "0.8"
base64 = "0.22"
zeroize = "1.7"
thiserror = "1"

[profile.release]
# Kuchsiz mashinalar uchun kichik va tez binar
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
